streak and attribute separated